gulp で livereload する

--- a/app/template.html
+++ b/app/template.html
@@ -15,7 +15,9 @@
                 render: function() {
                     return (
                         <div className="commentBox">
-                            Hello, world! I am a CommentBox.
+                            Hello, world! I am a CommentBox.<br />
+                            Hello, world! I am a CommentBox.<br />
+                            Hello, world! I am a CommentBox.<br />
                         </div>
                     );
                 }
@@ -25,5 +27,6 @@
                 document.getElementById('content')
             );
         </script>
+        <script src="src/tutorial.js"></script>
     </body>
 </html>
